--- a/css/reset.css
+++ b/css/reset.css
@@ -23,15 +23,13 @@ label{display:block;font-size:1.125rem}
 	vertical-align: top;
 }
 .pr{
-    border-radius: 4px;
-    border: 1px solid #dcdfe6;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: #606266;
     display: inline-block;
     font-size: 1.2rem;
-    letter-spacing: 0.35rem;
-    line-height: 40px;
+    letter-spacing: 0.3rem;
+    line-height: 30px;
     outline: 0;
     padding: 0 15px;
     -webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
@@ -40,9 +38,10 @@ label{display:block;font-size:1.125rem}
     margin: 0;
     font-family: cursive;
     text-align: start;
-    min-height: 40px;
     text-align:justify;
     text-align-last:justify;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 .name {
     display: inline-block;
@@ -53,6 +52,7 @@ label{display:block;font-size:1.125rem}
     text-align: center;
     line-height: 1.1rem;
     color: #f39c12;
+    font-family: auto;
 }
 .red{
 	color:#e74c3c;
@@ -64,11 +64,11 @@ label{display:block;font-size:1.125rem}
 .green{
 	color:#2ecc71;
 	display: inline-block;
-	border-right: 1px dashed;
     margin:0 2px;
     position: relative;
     text-align:justify;
     text-align-last:justify;
+    letter-spacing: 0;
 }
 #pr:hover{border-color:#c0c4cc}
 .test-5::-webkit-scrollbar{width:15px;height:1px}
